--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,6 @@ h2 {
     margin: 5px;
 }
 
-.logoBoot {
-    font-size: 25px;
-}
-
 .navBar {
     list-style-type: none;
     text-decoration: none;
@@ -128,6 +124,11 @@ h2 {
     white-space: nowrap;
 }
 
+.navBarBoot nav a:hover {
+    color: #b8dbd9ff;
+    font-size: 27px;
+}
+
 .navBarBoot ul {
     list-style: none;
     margin: 0;
@@ -138,6 +139,55 @@ h2 {
 .navBarBoot a {
     text-decoration: none;
     color: #f4f4f9ff;
+}
+
+.logoBoot {
+    font-size: 25px;
+}
+
+.qh1 {
+    font-size: 30px;
+    font-family: 'Bebas Neue', cursive;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.footerBoot {
+    margin:0px;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 20px;
+    color: #b8dbd9ff;
+}
+
+.footerBoot ul {
+    padding: 0;
+    margin: 0;
+}
+
+.footerBootLista {
+    list-style: none;
+    font-size: 16px;
+    color: #f4f4f9ff;
+    white-space: nowrap;
+}
+
+.footerBootLista a {
+    text-decoration: none;
+    color: #f4f4f9ff;
+}
+
+.footerBootTitulo p {
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+.footerBootLista a:hover {
+    color: #b8dbd9ff;
+}
+
+.footerBootLista li:hover {
+    transform: scale(1.05);
 }
 
 /* Banner */
@@ -278,6 +328,7 @@ h2 {
     ;
     justify-content: center;
     align-items: center;
+    gap: 10px;
 }
 
 .footerBox1 {
@@ -343,6 +394,11 @@ h2 {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+.footerBoxListaUL li a:hover {
+    color: #b8dbd9ff;
+    transform: scale(1.05);
 }
 
 
@@ -545,15 +601,33 @@ h2 {
     border-color: #000000ff;
 }
 
+/* Laptop-Intermedio */
+
+@media (max-width: 1500px) {
+
+    .cardFlex {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+}
+
 /* TABLET */
 
 @media (max-width: 768px) {
 
+    .cardFlex {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
 
-
-
+    .footerBoxFlex {
+        gap: 25px;
+    }
 
     }
+
+/* MOBILE */
 
 @media (max-width: 576px) {
 
@@ -583,13 +657,41 @@ h2 {
 /* CARDS */
 
     .cardFlex {
-        margin-left: 0px;
-        margin-right: 0px;
+        margin-left: 40px;
+        margin-right: 40px;
     }
 
     .productBoxFlex {
         margin-left: 0px;
         margin-right: 0px;
+    }
+
+/* FORM */
+
+    .contactFlex {
+        margin: 0px;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .contactForm {
+        width: 100%;
+    }
+
+    .contactForm form input {
+        width: 100%;
+    }
+
+    .contactForm form .consulta {
+        width: 100%;
+    }
+
+    .contactBox {
+        margin: 10px;
+    }
+
+    .contactBox iframe {
+        width: 100%;
     }
 
 /* FOOTER */
