implementacion de variables y SEO en el codigo

--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -1,6 +1,6 @@
 
 body {
-    background-color: #f4f4f9ff;
+    background-color: $color-contraste;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
