--- a/scss/layout/_main-productos.scss
+++ b/scss/layout/_main-productos.scss
@@ -21,7 +21,7 @@
     }
   
     div p {
-      font-family: 'Bebas Neue', cursive;
+      font-family: $font-1, cursive;
       font-size: 30px;
     }
   }
