--- a/scss/layout/_main-quienesSomos.scss
+++ b/scss/layout/_main-quienesSomos.scss
@@ -1,9 +1,9 @@
 
 .qText {
     p {
-      font-family: 'Oswald', sans-serif;
+      font-family: $font-2, sans-serif;
       font-size: 15px;
-      color: #2f4550ff;
+      color: $color-alt;
       text-align: left;
     }
   
