--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -9,9 +9,9 @@
     .logo {
       width: 100%;
       border-style: solid;
-      border-top: #000000ff;
-      border-left: #000000ff;
-      border-right: #000000ff;
+      border-top: $color-fondo;
+      border-left: $color-fondo;
+      border-right: $color-fondo;
       margin-bottom: 10px;
     }
   
