--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
   padding: 0;
   box-sizing: border-box; }
 
+/* Paleta de colores */
+/* Tipo de letra */
 body {
   background-color: #f4f4f9ff;
   min-height: 100vh;
@@ -24,7 +26,7 @@ header {
 
 .logo {
   width: 250px;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: 25px;
   color: #f4f4f9ff;
   display: flex;
@@ -42,7 +44,7 @@ header {
 .navBar {
   list-style-type: none;
   text-decoration: none;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: 25px;
   color: #f4f4f9ff;
   display: flex;
@@ -58,7 +60,7 @@ header {
     .navBar li a {
       list-style-type: none;
       text-decoration: none;
-      font-family: 'Bebas Neue', cursive;
+      font-family: "Bebas Neue", cursive;
       font-size: 25px;
       color: #f4f4f9ff;
       white-space: nowrap;
@@ -83,7 +85,7 @@ header {
 .brandBar {
   list-style: none;
   text-decoration: none;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -109,7 +111,7 @@ main {
 
 h1 {
   font-size: 30px;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   margin-top: 5px;
   margin-bottom: 5px;
   display: flex;
@@ -117,12 +119,12 @@ h1 {
   align-items: center; }
 
 h2 {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   color: #000000ff;
   font-size: 23px; }
 
 .navBarBoot {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: 25px;
   white-space: nowrap; }
   .navBarBoot nav a:hover {
@@ -142,14 +144,14 @@ h2 {
 
 .qh1 {
   font-size: 30px;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   margin-top: 5px;
   margin-bottom: 5px;
   font-weight: bold; }
 
 .footerBoot {
   margin: 0px;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: 20px;
   color: #b8dbd9ff; }
   .footerBoot ul {
@@ -199,7 +201,7 @@ h2 {
   height: 190px; }
 
 .cardText {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 15px;
   color: #2f4550ff;
   text-align: center;
@@ -210,14 +212,14 @@ h2 {
   align-items: center; }
 
 .cardPrice {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: 25px;
   color: #000000ff;
   text-align: center;
   margin: 6px; }
 
 .cardButton {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   background-color: #b8dbd9ff;
   color: #000000ff;
   font-size: 20px;
@@ -256,11 +258,11 @@ h2 {
   transform: scale(1.05); }
 
 .productBox div p {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: 30px; }
 
 .qText p {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 15px;
   color: #2f4550ff;
   text-align: left; }
@@ -283,7 +285,7 @@ h2 {
   margin-right: 30px; }
 
 .contactInfo p {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 17px;
   color: #2f4550ff;
   margin: 10px;
@@ -291,15 +293,15 @@ h2 {
   text-align: center; }
 
 .contactForm {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   color: #000000ff;
   margin: 10px;
   width: 600px; }
   .contactForm form h2 {
-    font-family: 'Bebas Neue', cursive;
+    font-family: "Bebas Neue", cursive;
     color: #000000ff; }
-  .contactForm form input {
-    font-family: 'Oswald', sans-serif;
+  .contactForm form input, .contactForm form .consulta {
+    font-family: "Oswald", sans-serif;
     color: #000000ff;
     background-color: #b8dbd9ff;
     font-size: 15px;
@@ -307,14 +309,7 @@ h2 {
     margin-top: 5px;
     margin-bottom: 5px; }
   .contactForm form .consulta {
-    font-family: 'Oswald', sans-serif;
-    color: #000000ff;
-    background-color: #b8dbd9ff;
-    font-size: 15px;
-    width: 600px;
     height: 400px;
-    margin-top: 5px;
-    margin-bottom: 5px;
     text-align: start; }
   .contactForm form .button {
     width: 100px;
@@ -347,12 +342,12 @@ h2 {
   justify-content: right; }
 
 .productTitle {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: 30px;
   margin-bottom: 10px; }
 
 .productSubtitle {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 20px;
   width: 90%;
   color: #2f4550ff;
@@ -365,13 +360,13 @@ h2 {
   margin-bottom: 20px; }
 
 .productPrice {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   color: red;
   font-size: 30px;
   width: 100px; }
 
 .productButton {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   background-color: #b8dbd9ff;
   color: #000000ff;
   font-size: 30px;
@@ -389,19 +384,19 @@ h2 {
     color: #000000ff; }
 
 .productSpecsTitle {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   color: #000000ff;
   font-size: 25px; }
 
 .productSpecsBody {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 18px;
   color: #2f4550ff;
   margin-bottom: 20px; }
 
 footer {
   background-color: #000000ff;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   flex: 0 0 auto; }
 
 .footerBoxFlex {
@@ -428,7 +423,7 @@ footer {
 
 .footerBox {
   background-color: #000000ff;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   margin: 10px;
   text-align: center; }
 
@@ -528,7 +523,7 @@ footer {
     justify-content: center; }
   .contactForm {
     width: 100%; }
-    .contactForm form input, .contactForm form .consulta {
+    .contactForm form input, .contactForm form .consulta, .contactForm form .consulta {
       width: 100%; }
   .contactBox {
     margin: 10px; }
