--- a/scss/components/_bootstrap.scss
+++ b/scss/components/_bootstrap.scss
@@ -1,11 +1,11 @@
 
 .navBarBoot {
-    font-family: 'Bebas Neue', cursive;
+    font-family: $font-1, cursive;
     font-size: 25px;
     white-space: nowrap;
   
     nav a:hover {
-      color: #b8dbd9ff;
+      color: $color-seleccion;
       font-size: 27px;
     }
   
@@ -18,7 +18,7 @@
   
     a {
       text-decoration: none;
-      color: #f4f4f9ff;
+      color: $color-contraste;
     }
   }
   
@@ -28,7 +28,7 @@
   
   .qh1 {
     font-size: 30px;
-    font-family: 'Bebas Neue', cursive;
+    font-family: $font-1, cursive;
     margin-top: 5px;
     margin-bottom: 5px;
     font-weight: bold;
@@ -36,9 +36,9 @@
   
   .footerBoot {
     margin: 0px;
-    font-family: 'Bebas Neue', cursive;
+    font-family: $font-1, cursive;
     font-size: 20px;
-    color: #b8dbd9ff;
+    color: $color-seleccion;
   
     ul {
       padding: 0;
@@ -49,12 +49,12 @@
   .footerBootLista {
     list-style: none;
     font-size: 16px;
-    color: #f4f4f9ff;
+    color: $color-contraste;
     white-space: nowrap;
   
     a {
       text-decoration: none;
-      color: #f4f4f9ff;
+      color: $color-contraste;
     }
   }
   
@@ -65,7 +65,7 @@
   
   .footerBootLista {
     a:hover {
-      color: #b8dbd9ff;
+      color: $color-seleccion;
     }
   
     li:hover {
