--- a/scss/layout/_tags.scss
+++ b/scss/layout/_tags.scss
@@ -1,7 +1,7 @@
 
 h1 {
     font-size: 30px;
-    font-family: 'Bebas Neue', cursive;
+    font-family: $font-1, cursive;
     margin-top: 5px;
     margin-bottom: 5px;
     display: flex;
@@ -10,7 +10,7 @@ h1 {
   }
   
   h2 {
-    font-family: 'Bebas Neue', cursive;
-    color: #000000ff;
+    font-family: $font-1, cursive;
+    color: $color-fondo;
     font-size: 23px;
   }
