--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -6,6 +6,9 @@ $color-contraste: #f4f4f9ff;
 $color-seleccion: #b8dbd9ff;
 $color-alt: #2f4550ff;
 
+$color-card: white ;
+$color-hover:rgb(230, 62, 62);
+
 /* Tipo de letra */
 
 $font-1: 'Bebas Neue';
