--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -71,17 +71,12 @@ footer {
   }
   
   .footerBoxListaUL {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexbox (center,center);
     text-align: center;
   
     li {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-  
+      @extend .footerBoxListaUL;
+      
       a:hover {
         color: $color-seleccion;
         transform: scale(1.05);
