--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -1,15 +1,13 @@
 
 .cardFlex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexbox (center,center);
     flex-wrap: wrap;
     margin-left: 200px;
     margin-right: 200px;
   }
   
   .card {
-    background-color: white;
+    background-color: $color-card;
     width: 220px;
     height: 330px;
     margin: 20px;
@@ -34,9 +32,7 @@
     text-align: center;
     margin: 6px;
     height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexbox (center,center);
   }
   
   .cardPrice {
@@ -59,7 +55,7 @@
     text-align: center;
   
     &:hover {
-      background-color: rgb(230, 62, 62);
+      background-color: $color-hover;
       transform: scale(1.03);
     }
   
@@ -69,9 +65,7 @@
   
       p {
         height: 30px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @include flexbox (center,center);
       }
     }
   }
