--- a/scss/layout/_main-productos.scss
+++ b/scss/layout/_main-productos.scss
@@ -1,8 +1,6 @@
 
 .productBoxFlex {
-    display: flex;
-    justify-content: center;
-    align-items: top;
+  @include flexbox (center,top);
     flex-wrap: wrap;
     margin-left: 200px;
     margin-right: 200px;
