--- a/scss/layout/_tags.scss
+++ b/scss/layout/_tags.scss
@@ -4,9 +4,7 @@ h1 {
     font-family: $font-1, cursive;
     margin-top: 5px;
     margin-bottom: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexbox (center,center);
   }
   
   h2 {
