Hago las últimas modificaciones para la entrega final y agrego README.MD

--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -2,5 +2,5 @@
 @mixin flexbox ($justify,$align) {
     display: flex;
     justify-content: $justify;
-    align-items: $center;
+    align-items: $align;
 }
