--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,11 @@ header {
   flex: 0 0 auto; }
 
 .flexNavBar {
-  display: flex;
   width: 100%;
-  flex-wrap: wrap;
+  display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   text-align: center; }
 
 .logo {
@@ -30,8 +30,8 @@ header {
   font-size: 25px;
   color: #f4f4f9ff;
   display: flex;
-  align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center; }
   .logo a {
     text-decoration: none;
     color: #f4f4f9ff; }
@@ -77,7 +77,7 @@ header {
   justify-content: center;
   align-items: center; }
   .banner img {
-    height: 210px;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center; }
@@ -87,14 +87,14 @@ header {
   text-decoration: none;
   font-family: "Bebas Neue", cursive;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  flex-wrap: wrap; }
   .brandBar li {
     width: 120px;
     display: flex;
-    align-items: center;
-    justify-content: center; }
+    justify-content: center;
+    align-items: center; }
     .brandBar li a {
       padding: 3px; }
 
@@ -122,6 +122,9 @@ h2 {
   font-family: "Bebas Neue", cursive;
   color: #000000ff;
   font-size: 23px; }
+
+strong {
+  color: #e63e3e; }
 
 .navBarBoot {
   font-family: "Bebas Neue", cursive;
@@ -188,7 +191,7 @@ h2 {
 .card {
   background-color: white;
   width: 220px;
-  height: 330px;
+  height: 300px;
   margin: 20px;
   padding: 10px; }
   .card:hover {
@@ -198,7 +201,7 @@ h2 {
   text-align: center;
   padding: 1px;
   width: 200px;
-  height: 190px; }
+  height: 150px; }
 
 .cardText {
   font-family: "Oswald", sans-serif;
@@ -237,8 +240,8 @@ h2 {
     .cardButton a p {
       height: 30px;
       display: flex;
-      align-items: center;
-      justify-content: center; }
+      justify-content: center;
+      align-items: center; }
 
 .productBoxFlex {
   display: flex;
@@ -265,7 +268,7 @@ h2 {
   font-family: "Oswald", sans-serif;
   font-size: 15px;
   color: #2f4550ff;
-  text-align: left; }
+  text-align: justify; }
 
 .qText img {
   margin: 10px;
@@ -303,7 +306,7 @@ h2 {
   .contactForm form input, .contactForm form .consulta {
     font-family: "Oswald", sans-serif;
     color: #000000ff;
-    background-color: #b8dbd9ff;
+    background-color: #d4d4da;
     font-size: 15px;
     width: 600px;
     margin-top: 5px;
@@ -313,7 +316,7 @@ h2 {
     text-align: start; }
   .contactForm form .button {
     width: 100px;
-    background-color: #b8dbd9ff; }
+    background-color: #d4d4da; }
 
 .map {
   border-style: solid;
@@ -453,19 +456,14 @@ footer {
       display: flex;
       align-items: center; }
 
-.footerBoxListaUL {
+.footerBoxListaUL, .footerBoxListaUL li {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center; }
-  .footerBoxListaUL li {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center; }
-    .footerBoxListaUL li a:hover {
-      color: #b8dbd9ff;
-      transform: scale(1.05); }
+  .footerBoxListaUL li a:hover {
+    color: #b8dbd9ff;
+    transform: scale(1.05); }
 
 @media (max-width: 1500px) {
   .cardFlex {
