--- a/scss/layout/_main-contacto.scss
+++ b/scss/layout/_main-contacto.scss
@@ -38,7 +38,7 @@
       input {
         font-family: $font-2, sans-serif;
         color: $color-fondo;
-        background-color: $color-seleccion;
+        background-color: rgb(212, 212, 218);
         font-size: 15px;
         width: 600px;
         margin-top: 5px;
@@ -53,7 +53,7 @@
   
       .button {
         width: 100px;
-        background-color: $color-seleccion;
+        background-color: rgb(212, 212, 218);
       }
     }
   }
