--- a/scss/layout/_main-quienesSomos.scss
+++ b/scss/layout/_main-quienesSomos.scss
@@ -4,7 +4,7 @@
       font-family: $font-2, sans-serif;
       font-size: 15px;
       color: $color-alt;
-      text-align: left;
+      text-align: justify;
     }
   
     img {
